--- a/index.html
+++ b/index.html
@@ -4,15 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <!-- Контент страницы -->
-        .
-
+    <!-- карточка пользователя -->
+    <div class="card">
+        <!-- лого пользователя -->
+        <div class="card-image">
+            <div class="card-image_logo"></div>
+            <!-- информация о пользователе -->
+            <div class="card-text">
+                <span class="name">Victor Crest 26</span>
+                <h2>London</h2>
+                <!-- статистика пользователя -->
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="value">4m</div>
+                        <div class="type">read</div>
+                    </div>
+                    <div class="stat">
+                        <div class="value">51m</div>
+                        <div class="type">views</div>
+                    </div>
+                    <div class="stat">
+                        <div class="value">33554</div>
+                        <div class="type">follower</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
     </div>
 </body>
 
